add create order support

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
   <script src="views/createDesign.js"></script>
   <script src="views/orderDesign.js"></script>
   <script src="views/designDetail.js"></script>
+  <script src="views/createOrder.js"></script>
   <script src="js/service/designServices.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
