--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,7 @@
   <script src="views/createOrder.js"></script>
   <script src="views/orderList.js"></script>
   <script src="views/myInfo.js"></script>
+  <script src="views/couponList.js"></script>
   <script src="js/service/designServices.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
