get openid on ui

--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
   <script src="views/myInfo.js"></script>
   <script src="views/couponList.js"></script>
   <script src="js/service/designServices.js"></script>
+  <script src="js/service/wechatServices.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
