--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,8 @@
   <!--script src="bower_components/angular-route/angular-route.js"></script-->
   <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
+  <script src="bower_components/ng-file-upload/angular-file-upload-shim.min.js"></script> 
+  <script src="bower_components/ng-file-upload/angular-file-upload.min.js"></script>
   <!--script src="js/bootstrap.js"></script-->
   <script src="js/ui-bootstrap-custom-tpls-0.12.0.js"></script>>
   <script src="app.js"></script>
