--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,9 @@
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="bower_components/ng-file-upload/angular-file-upload-shim.min.js"></script> 
   <script src="bower_components/ng-file-upload/angular-file-upload.min.js"></script>
+  <!--script src="bower_components/angular-dragdrop/src/angular-dragdrop.min.js"></script-->
+  <script src="bower_components/hammerjs/hammer.min.js"></script>
+  <script src="bower_components/angular-gestures/gestures.min.js"></script>
   <!--script src="js/bootstrap.js"></script-->
   <script src="js/ui-bootstrap-custom-tpls-0.12.0.js"></script>>
   <script src="app.js"></script>
