--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
+  <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-touch/angular-touch.js"></script>
   <script src="bower_components/angular-carousel/dist/angular-carousel.js"></script>
