--- a/app/index.html
+++ b/app/index.html
@@ -56,8 +56,10 @@
   <script src="views/orderList.js"></script>
   <script src="views/myInfo.js"></script>
   <script src="views/couponList.js"></script>
+  <script src="views/payOrder.js"></script>
   <script src="js/service/designServices.js"></script>
   <script src="js/service/wechatServices.js"></script>
+  <script src="js/service/uiDataServices.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
