--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
   <!--script src="bower_components/angular-dragdrop/src/angular-dragdrop.min.js"></script-->
   <script src="bower_components/hammerjs/hammer.min.js"></script>
   <script src="bower_components/angular-gestures/gestures.min.js"></script>
+  <script src="bower_components/angular-md5/angular-md5.js"></script>
   <!--script src="js/bootstrap.js"></script-->
   <script src="js/ui-bootstrap-custom-tpls-0.12.0.js"></script>>
   <script src="app.js"></script>
