--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,8 @@
   <script src="views/myInfo.js"></script>
   <script src="views/couponList.js"></script>
   <script src="views/payOrder.js"></script>
+  <script src="views/payWechatOrder.js"></script>
+  <script src="views/activities.js"></script>
   <script src="js/service/designServices.js"></script>
   <script src="js/service/wechatServices.js"></script>
   <script src="js/service/uiDataServices.js"></script>
