--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
   <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="css/wsFontStyle.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="bower_components/angular-carousel/dist/angular-carousel.css" type="text/css" />
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
