--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,7 @@
   <script src="views/payOrder.js"></script>
   <script src="views/payWechatOrder.js"></script>
   <script src="views/activities.js"></script>
+  <script src="views/management.js"></script>
   <script src="js/service/designServices.js"></script>
   <script src="js/service/wechatServices.js"></script>
   <script src="js/service/uiDataServices.js"></script>
