--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>微服私坊 WeavesFun</title>
+  <title>微服私纺 WeavesFun</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
